add modified morphology module

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [pipeline]
 steps= BasicModule.getBasicStats
-    ClassificationModule.byExampleWithFeatures:pen_markings
-    ClassificationModule.byExampleWithFeatures:coverslip_edge
+    #ClassificationModule.byExampleWithFeatures:pen_markings
+    #ClassificationModule.byExampleWithFeatures:coverslip_edge
     LightDarkModule.getIntensityThresholdPercent:tissue
     LightDarkModule.getIntensityThresholdPercent:darktissue
     BubbleRegionByRegion.detectSmoothness
