--- a/config_light.ini
+++ b/config_light.ini
@@ -7,9 +7,10 @@ steps= BasicModule.getBasicStats
     LightDarkModule.getIntensityThresholdPercent:darktissue
     MorphologyModule.fillSmallHoles
     MorphologyModule.removeSmallObjects
-    BlurDetectionModule.identifyBlurryRegions
+;    BlurDetectionModule.identifyBlurryRegions
     BasicModule.finalProcessingSpur
     BasicModule.finalProcessingArea
+    MorphologyModule.compareObjects
 ;    HistogramModule.compareToTemplates
 ;    HistogramModule.getHistogram
 ;    BrightContrastModule.getContrast
