--- a/config_light.ini
+++ b/config_light.ini
@@ -7,10 +7,10 @@ steps= BasicModule.getBasicStats
     LightDarkModule.getIntensityThresholdPercent:darktissue
     MorphologyModule.fillSmallHoles
     MorphologyModule.removeSmallObjects
-;    BlurDetectionModule.identifyBlurryRegions
+    BlurDetectionModule.identifyBlurryRegions
     BasicModule.finalProcessingSpur
     BasicModule.finalProcessingArea
-    MorphologyModule.compareObjects
+;    MorphologyModule.compareObjects
 ;    HistogramModule.compareToTemplates
 ;    HistogramModule.getHistogram
 ;    BrightContrastModule.getContrast
@@ -20,6 +20,7 @@ steps= BasicModule.getBasicStats
 ;    DeconvolutionModule.seperateStains
     SaveModule.saveFinalMask
     SaveModule.saveThumbnails
+    SaveModule.saveJson
     BasicModule.finalComputations
 
 
@@ -89,14 +90,14 @@ features:  frangi
 name: bubble
 upper_threshold: .94
 lower_threshold: .82
-upper_variance: 11
+upper_variance: 20
 invert: true
 
 
 [LightDarkModule.getIntensityThresholdPercent:tissue]
 name: nonwhite
 upper_threshold: .99
-lower_var: 10
+lower_var: 5
 
 [LightDarkModule.getIntensityThresholdPercent:darktissue]
 name: dark
@@ -152,7 +153,7 @@ image_work_size: 1.25x
 small_dim: 500
 
 [BlurDetectionModule.identifyBlurryRegions]
-image_work_size = 2.5x
+image_work_size = 1.25x
 blur_radius: 7
 blur_threshold: .05
 
