add border infos

--- a/config_light.ini
+++ b/config_light.ini
@@ -7,7 +7,7 @@ steps= BasicModule.getBasicStats
     LightDarkModule.getIntensityThresholdPercent:darktissue
     MorphologyModule.fillSmallHoles
     MorphologyModule.removeSmallObjects
-    BlurDetectionModule.identifyBlurryRegions
+;    BlurDetectionModule.identifyBlurryRegions
     BasicModule.finalProcessingSpur
     BasicModule.finalProcessingArea
 ;    MorphologyModule.compareObjects
