--- a/config_light.ini
+++ b/config_light.ini
@@ -22,6 +22,7 @@ steps= BasicModule.getBasicStats
     SaveModule.saveThumbnails
     SaveModule.saveJson
     BasicModule.finalComputations
+    SaveModule.renameFolder
 
 
 [BaseImage.BaseImage]
